<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/blue"
            android:textSize="@dimen/textSizeTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/topViewMargin30"
            android:text="@string/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/textViewUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:maxLines="1"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/topViewMargin30"
            android:text="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewUserName" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/textViewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgetPassword"
            style="@style/viewParent"
            android:layout_marginTop="@dimen/topViewMargin10"
            android:layout_gravity="end"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forgetYourPassword"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="@+id/textViewPassword"
            app:layout_constraintTop_toBottomOf="@+id/textViewPassword" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                style="@style/loginButton"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="@dimen/bottomSignButtonMargin"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/login"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signUp"
            style="@style/viewParent"
            android:layout_marginTop="@dimen/topViewMargin10"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/dontHaveAnAccountSignUp"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>